# Web_HW13

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: schemas.py
src/config/: config.py
src/database/: db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
