[tool.poetry]
name = "hw-12"
version = "0.1.0"
description = ""
authors = ["Olha Lialina <145963563+olhalialina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
fastapi = "^0.110.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"
redis = "^5.0.4"
cloudinary = "^1.40.0"
fastapi-limiter = "^0.1.6"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
